// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchField displays spinner when searching 1`] = `
<form
  className="input-group"
  onSubmit={[Function]}
  style={Object {}}
>
  <input
    className="form-control"
    placeholder="Søg titel/forfatter"
  />
  <span
    className="input-group-btn"
  >
    <button
      className="btn btn-default"
      onClick={[Function]}
      type="button"
    >
      <span
        className="spinner"
        style={
          Object {
            "display": "inline-block",
            "height": 12,
            "width": 12,
          }
        }
      />
    </button>
  </span>
</form>
`;

exports[`SearchField renders correctly with style 1`] = `
<form
  className="input-group"
  onSubmit={[Function]}
  style={
    Object {
      "margin": 10,
    }
  }
>
  <input
    className="form-control"
    placeholder="Søg titel/forfatter"
  />
  <span
    className="input-group-btn"
  >
    <button
      className="btn btn-default"
      onClick={[Function]}
      type="button"
    >
      🔍
    </button>
  </span>
</form>
`;
